<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <androidx.media3.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:controller_layout_id="@layout/custom_control_view"
        android:keepScreenOn="true"/>

<!--    For top controller    -->
    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize = "marquee"
            android:textStyle="bold"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_menu"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            app:tint="@color/white"
            android:layout_marginEnd="50dp"
            />


    </LinearLayout>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        android:src="@drawable/ic_lock_open"
        app:layout_constraintEnd_toEndOf="@id/topController"
        app:tint="@color/white"
        tools:ignore="MissingConstraints" />

<!--    Play button   -->
    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/play_btn"
        android:src="@drawable/ic_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/topController"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:selectableItemBackground"
        />


<!--        For bottom controller start here      -->
    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000"
        android:gravity="end|bottom">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_repeat"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:tint="@color/white" />


        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_previous"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/prev_btn"
            app:tint="@color/white"
            />


        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_next"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_btn"
            app:tint="@color/white"
            />


        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_fullscreen"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_btn"
            app:tint="@color/white"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>