<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


  <View android:id="@id/exo_controls_background"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="@color/exo_black_opacity_60"/>



  <FrameLayout android:id="@id/exo_bottom_bar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/exo_styled_bottom_bar_height"
      android:layout_marginTop="@dimen/exo_styled_bottom_bar_margin_top"
      android:layout_gravity="bottom"
      android:background="@color/exo_bottom_bar_background">


    <androidx.media3.ui.DefaultTimeBar
        android:id="@id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scrubber_color="@color/white"
        app:played_color="@color/white"
        android:layout_marginTop="-40dp"
        app:unplayed_color="@color/transparentWhite"
        app:buffered_color="@color/transparentWhite"
        app:scrubber_enabled_size="10dp"
        app:scrubber_disabled_size="5dp"
        android:layout_marginHorizontal="5dp"/>



    <LinearLayout android:id="@id/exo_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="-5dp"
        android:layout_gravity="center_vertical|start">

      <TextView android:id="@id/exo_position"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:text="@string/duration"
          android:layout_margin="10dp"
          />

<!--      Separator     -->
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:text="@string/colon"
          android:layout_marginVertical="10dp"
          />


      <TextView android:id="@id/exo_duration"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:text="@string/loading"
          android:layout_margin="10dp"
          />

    </LinearLayout>


    <HorizontalScrollView android:id="@id/exo_extra_controls_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:visibility="invisible">
    </HorizontalScrollView>

  </FrameLayout>

  <View android:id="@id/exo_progress_placeholder"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_gravity="bottom"
      android:layout_marginBottom="55dp"/>


</merge>
